# karak

./: Makefile  README.md  pyproject.toml
benchmarks/: barq_app.py  fastapi_app.py  karak_app.py  profile_cpu.py  run_benchmark.py  thread_analysis.py
examples/: basic.py
src/barq/: __init__.py  app.py  http.py  router.py  server.py  types.py
src/barq/core/: __init__.py  types.py
src/barq/runtime/: __init__.py  http.py  server.py  socket.py
src/barq/toolkit/: __init__.py  app.py  router.py
src/karak/: __init__.py  app.py  http.py  server.py
