[project]
name = "barq"
version = "0.1.0"
description = "A pure-Python HTTP framework built for free-threaded Python"
readme = "README.md"
authors = [
    { name = "Fauzan", email = "im.external@pm.me" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.5",
]

[project.optional-dependencies]
fast = ["orjson>=3.10.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.133.1",
    "httpx>=0.28.1",
    "ruff>=0.9.0",
    "uvicorn>=0.41.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["F541"]
